--- a/src/TrainingDomain/CoachingMentoring/CoachingMentoringDomain/CoachingMentoringDomain.csproj
+++ b/src/TrainingDomain/CoachingMentoring/CoachingMentoringDomain/CoachingMentoringDomain.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="CoachingContext\Shared\" />
     <Folder Include="MentoringContext\" />
     <Folder Include="LearningAndDevelopmentContext\" />
     <Folder Include="FeedbackAndReviewContext\" />
